fixed gap in portfolio and width in team

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,23 +66,34 @@ p {
     max-width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* #endregion Global Styles */
 
 /* #region header*/
+.header {
+    border-bottom: 1px solid #E7E9FC;
+}
 .header-container {
-    justify-content: space-between;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
     padding-top: 24px;
     padding-bottom: 24px;
-    border-bottom: 1px solid #e7e9fc
+}
+.nav {
+    display: flex;
+    align-items: center;
+    gap: 76px;
 }
 .nav-list {
     display: flex;
     gap: 40px;
-    justify-content: space-between;
+}
+.contacts-list {
+    display: flex;
+    gap: 40px;
 }
 .logo {
     font-family: Raleway, sans-serif;
@@ -93,7 +104,7 @@ p {
     color: #2E2F42;
     letter-spacing: 0.03em;
     margin-left: 0;
-    margin-right: 40px;
+    margin-right: 0;
 }
 .contacts-link,
 .contacts {
@@ -178,13 +189,13 @@ p {
     gap: 24px;
     text-align: center;
 }
-.team li {
+.team-item {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
-    max-width: 264px;
-    max-height: 380px;
+    width: calc((100% - 24px) / 4);
+    height: 380px;
     border-radius: 0 0 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
@@ -196,25 +207,20 @@ p {
 
 /* #region Portfolio Section*/
 .portfolio-container {
-    display: flex;
     flex-direction: column;
     align-items: center;
     gap: 67px;
-}
-.portfolio-title {
-    text-align: center;
-    margin-bottom: 19px;
 }
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
+    row-gap: 48px;
 }
 .portfolio-item {
-    /* width: calc((100% - 48px)/ 3); */
-    margin-bottom: 24px;
-    width: 360px;
-    height: 420px;
+    display: flex;
+    flex-direction: column;
+    max-width: calc((100% - 24px) / 3);
 }
 .portfolio-subtitle {
     padding-bottom: 8px;
